--- a/tests/AccessibleColors.Tests/AccessibleColors.Tests.csproj
+++ b/tests/AccessibleColors.Tests/AccessibleColors.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\WcagContrastColor\AccessibleColors.csproj" />
+    <ProjectReference Include="..\..\src\AccessibleColors\AccessibleColors.csproj" />
   </ItemGroup>
 
   <ItemGroup>
