--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   publish:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v4
@@ -31,11 +31,9 @@ jobs:
       run: dotnet test --configuration Release --no-build --verbosity normal
     
     - name: Pack
-      working-directory: ./AccessibleColors
       run: dotnet pack src/AccessibleColors/AccessibleColors.csproj -c Release -o packages
 
     - name: Push
-      working-directory: ./AccessibleColors
       run: dotnet nuget push "packages/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
 
     - name: Push to GitHub
